--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -18,6 +18,7 @@
             app:layout_constraintStart_toStartOf="parent"
             />
         <TextView
+            android:id="@+id/textViewTitle"
             android:layout_width="0dp"
             android:layout_height="0dp"
             tools:text="fwfwerf"
@@ -28,7 +29,7 @@
             android:textSize="24sp"
             android:gravity="center"/>
         <TextView
-            android:id="@+id/textViewPrice"
+            android:id="@+id/textViewDetailsPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/imageViewIcon"
@@ -38,9 +39,10 @@
             android:gravity="center"
             tools:text="wfrfer"/>
         <TextView
+            android:id="@+id/textViewDetailsLastUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textViewPrice"
+            app:layout_constraintTop_toBottomOf="@id/textViewDetailsPrice"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="end"
