--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -27,7 +27,8 @@
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="24sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/textViewDetailsPrice"
             android:layout_width="match_parent"
@@ -37,7 +38,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="24sp"
             android:gravity="center"
-            tools:text="wfrfer"/>
+            tools:text="wfrfer"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/textViewDetailsLastUpdate"
             android:layout_width="match_parent"
@@ -47,7 +49,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="end"
             tools:text="rferfe"
-            android:textSize="24sp"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
